deployment/service.yaml
kind: Service

apiVersion: v1

metadata:
  name: goalgorithm

spec:

  selector:
    app: goalgorithm

  ports:

  - port: 80

    targetPort: 8000
