deployment/route.yaml
kind: Route

apiVersion: route.openshift.io/v1

metadata:
  name: goalgorithm

spec:

  to:

    kind: Service

    name: goalgorithm

  port:

    targetPort: 80
